--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -7,14 +7,16 @@
                 <div class="wui-i-shop_circle">
                     <img src="/static/img/default_shop_avatar.png">
                 </div>
-                <span class="wui-i-title-pic-icon"></span>
-                <div class="wui-i-title-pic"></div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
                         <span class="wui-i-rules-title-content xa-i-rules-title-content">
                             <i class="wui-i-star"></i><p>团购说明</p><i class="wui-i-star"></i>
                         </span>
                     </div>
+                </div>
+                <div class="wui-i-titleLabel">
+                    <div class="wui-i-title-pic-icon"></div>
+                    <div class="wui-i-title-pic"></div>
                 </div>
                 <div class="wui-i-rules-contentbox xa-i-rules-contentbox none">
                     <div class="wui-i-rules-content xa-i-rules-content">
@@ -28,10 +30,11 @@
                     </div>
                 </div>
             </div>
+
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
                     <div class="wui-i-product-title">{{component.model.title}}</div>
-                    <div class="wui-i-product-price-group none">
+                    <div class="wui-i-product-price-group">
                         <span class="wui-i-product-price-group-title">团购价</span>
                         <span class="wui-i-product-price-group-original-price">240元</span>
                         <span class="wui-i-product-price-group-group-price">140元</span>
@@ -40,9 +43,12 @@
                         <img src="{% if component.model.product.productImg %} {{component.model.product.productImg}}{%else%}/standard_static/test_resource_img/hangzhou1.jpg {% endif %}">
                     </div>
                     <div class="wui-i-choose_group_box">
-                        <span>选择团购</span>
-                        <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
-                        	<ul
+                        <div class="wui-i-choose_title_box">
+                            <span class="wui-i-choose_title">选择团购</span>
+                            <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
+                        </div>
+                        <div class="wui-i-choose_items_box">
+                            <ul
                                 class="wui-i-items xa-inputControl"
                                 data-input-name="{{component.model.title}}"
                                 data-validate='require-select-span::请选择团购类型'
@@ -53,7 +59,7 @@
                                         <span name="radio" data-type="radio" span-type="selection" class="selection-radio" data-input-product_id="{{component.model.product.productId}}" data-input-group_type="{{component.components.0.model.group_type}}" data-input-group_days="{{ component.components.0.model.group_days }}" data-input-group_price="{{ component.components.0.model.group_price }}">
                                         </span>
                                         <span class="ml5 xa-itemTitle group_type" style="margin-left: 30px!important;line-height: 22px;">{% if component.components.0.model.group_type %}{{component.components.0.model.group_type}}{% else %}5{% endif %}人团</span>
-                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 20px!important;line-height: 22px;">拼团时间{{component.components.0.model.group_days}}天</span>
+                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 20px!important;line-height: 22px;">拼团时间：{{component.components.0.model.group_days}}天</span>
                                         <span class="ml5 xa-itemTitle group_price" style="margin-left: 20px!important;line-height: 22px;">团购价：{{component.components.0.model.group_price}}元</span>
                                     </div>
                                 </li>
@@ -63,11 +69,14 @@
                                         <span name="radio" data-type="radio" span-type="selection" class="selection-radio" data-input-product_id="{{component.model.product.productId}}" data-input-group_type="{{component.components.1.model.group_type}}" data-input-group_days="{{ component.components.1.model.group_days }}" data-input-group_price="{{ component.components.1.model.group_price }}">
                                         </span>
                                         <span class="ml5 xa-itemTitle group_type" style="margin-left: 30px!important;line-height: 22px;">{% if component.components.1.model.group_type %}{{component.components.1.model.group_type}}{% else %}5{% endif %}人团</span>
-                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 20px!important;line-height: 22px;">拼团时间{{component.components.1.model.group_days}}天</span>
+                                        <span class="ml5 xa-itemTitle group_days" style="margin-left: 20px!important;line-height: 22px;">拼团时间：{{component.components.1.model.group_days}}天</span>
                                         <span class="ml5 xa-itemTitle group_price" style="margin-left: 20px!important;line-height: 22px;">团购价：{{component.components.1.model.group_price}}元</span>
                                     </div>
                                 </li>
                             </ul>
+                        </div>
+
+
 
                     </div>
                     <div class="wui-i-group_box_progress none">
