--- a/weapp/mall/templates/mall/editor/promotion/card_exchange_details.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange_details.html
@@ -113,7 +113,7 @@ $(document).ready(function() {
 		W.getApi().call({
 		    method: 'get',
 			app: 'mall2',
-			api: 'card_exchange_details',
+			api: 'export_card_exchange_details',
 			args: "",
 			scope: this,
 			success: function(data) {
