--- a/weapp/mall/templates/mall/webapp/promotion/m_card_exchange.html
+++ b/weapp/mall/templates/mall/webapp/promotion/m_card_exchange.html
@@ -95,6 +95,7 @@
 		margin-bottom: 20px;
 	}
 	.xui-exchange-form .xui-form-control .xui-exchange-choose{
+		position: relative;
 		box-sizing: border-box;
 		display: inline-block;
 		width: 45%;
@@ -107,6 +108,22 @@
 		font-size: 1.7rem;
 		color: #666666;
 		font-weight: 800;
+	}
+	.xui-exchange-choose .xui-exchange-mask{
+		position: absolute;
+		top: 0;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		background-color: rgba(0,0,0,0.5);
+		width: 100%;
+		height: 100%;
+		color: #fff;
+		text-align: center;
+	}
+	.xui-exchange-choose .xui-exchange-mask .xui-exchange-runout{
+		font-size: 1.8rem !important;
+		margin-top: 0.8em;
 	}
 	.xui-exchange-form .xui-form-control .xui-exchange-choose.active{
 		color: #00a5ed;
@@ -162,10 +179,11 @@
 		padding-left: 10px;
 		border: 1px solid #e5e5e5;
 	}
-	input.ui-input-text:focus, textarea.ui-input-text:focus{
-		border-color:#0091d5;
+	input.ui-input-text:focus,.ui-focus{
+		border-color:#00a5ed !important;
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code,  .xui-alert-mask .xui-alert-reminder{
+		position: relative;
 		font-family: inherit;
 		text-align: left;
 		width: 65%;
@@ -174,17 +192,56 @@
 		margin-top: 50%;
 		margin-left: 10%;
 		border-radius: 8px;
+	}
+	.xui-alert-getCode .xui-alert-mask .xui-alert-code{
 		overflow: hidden;
 	}
-
+	.xui-alert-mask .xui-alert-reminder p{
+		text-align: center;
+		line-height: 25px;
+		font-weight: 500;
+	}
+	.xui-reminder-title{
+		font-size: 1.3rem;
+		color: #00a5ed;
+		margin-bottom: 20px;
+	}
+	.xui-alert-close{
+		position: absolute;
+		top: -12px;
+		right: -12px;
+		display: inline-block;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		text-align: center;
+		line-height: 32px;
+		background-color: #fff;
+		color: #6b6b6b;
+		z-index: 9999;
+		font-size: 2.3rem;
+	}
+	.xui-alert-mask .xui-alert-reminder button{
+		text-align: center;
+		display: inline-block;
+		width: 60%;
+		margin-top: 35px;
+		margin-left: 20%;
+		background-color: #0091d5;
+		border: none;
+		border-radius: 8px;
+		color: #fff;
+		font-size: 1rem;
+		line-height: 30px;
+	}
 	.xui-alert-code label.ui-input-text {
-		color: #0091d5;
+		color: #00a5ed;
 		font-size: 1.1rem;
-		font-weight: 600 !important;
+		font-weight: 500 !important;
 		line-height: 1.4;
 		display: block;
 		font-weight: 400;
-		margin: 0 0 .3em;
+		margin: 0 0 .5em;
 	}
 	.ui-focus{
 		box-shadow: none;
@@ -223,10 +280,10 @@
 					<!--{% if card_exchange_rule.is_bind %}-->
 					<!--<input type="tel" value="1354567678" disabled/>-->
 					<!--{% else %}-->
-					<!--<input class="xui-exchange-tel" type="tel" id="phone"/>-->
+					<!--<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>-->
 					<!--<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>-->
 					<!--{% endif%}-->
-					<input class="xui-exchange-tel" type="tel" id="phone"/>
+					<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>
 					<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>
 				</div>
 				<p class="xui-help-block">绑定手机号才能把奖励发到你的帐户里哦～</p>
@@ -235,33 +292,37 @@
 				<label><b></b>选择兑换：</label>
 				<div class="xui-bg">
 					{% for prize in card_exchange_rule.prize %}
-					<div class="xui-exchange-choose">兑<span>¥</span>{{prize.money}}
+					<div class="xui-exchange-choose xa-exchange-choose">兑<span>¥</span>{{prize.money}}
 						<p>消耗{{prize.integral}}积分</p>
+						<div class="xui-exchange-mask">
+							<p class="xui-exchange-runout">已抢光</p>
+						</div>
 					</div>
 					{% endfor %}
 				</div>
 			</div>
 			<div class="xui-form-control xui-submit-btn">
-				<a class="xui-exchange-confirm">兑换</a>
+				<a class="xui-exchange-confirm xa-exchange-confirm">兑换</a>
 				<a class="xui-exchange-abolish">取消</a>
 			</div>
 		</form>
-		<div class="xui-alert-getCode hidden">
+		<div class="xui-alert-getCode xa-alert-getCode hidden">
 			<div class="xui-alert-mask">
 				<div class="xui-alert-code">
 					<label for="xui-test-code">输入短信验证码</label>
-					<input type="text" id="xui-test-code" />
-					<button data-inline="true" class="xui-btn-abolish" type="button">取消</button>
+					<input type="text" id="xui-test-code" class="xa-phoneCode" />
+					<button data-inline="true" class="xui-btn-abolish xa-btn-abolish" type="button">取消</button>
 					<button data-inline="true" class="xui-btnsubmit xa-submit" type="button">确认</button>
 				</div>
 			</div>
 		</div>
-		<div class="xui-alert-exchange hidden">
+		<div class="xui-alert-exchange xa-alert-exchange hidden">
 			<div class="xui-alert-mask">
 				<div class="xui-alert-reminder">
-					<p>兑换成功</p>
+					<p class="xui-reminder-title">兑换成功</p>
 					<p>微众卡将存到个人中心——微众卡余额查询中，请注意查收 ！</p>
-					<button>知道了</button>
+					<button class="xa-exchange-submit">知道了</button>
+					<a href="javascript:void(0)" class="xui-alert-close xa-alert-close">x</a>
 				</div>
 			</div>
 		</div>
@@ -276,13 +337,26 @@
 			$('button').removeClass('ui-btn-hidden')}
 		$('input').parent().removeClass();
 		$('button').siblings().hide().parent().removeClass();
-		$('.xui-exchange-choose').click(function(){
-			if(!$('.xui-exchange-choose').hasClass('active')){
-				$('.xui-exchange-choose').addClass('active').siblings().removeClass('active')
+		$('.xa-exchange-choose').click(function(){
+			if(!$('.xa-exchange-choose').hasClass('active')){
+				$('.xa-exchange-choose').addClass('active').siblings().removeClass('active')
 			}else{
-				$('.xui-exchange-choose').removeClass('active')
+				$('.xa-exchange-choose').removeClass('active')
 			}
-		})
+		});
+		function validate_phone(phone_number){
+			var reg = /^1[3|4|5|8][0-9]\d{4,8}$/;
+			if(!reg.test(phone_number) || phone_number.length != 11){
+				$('.xui-page').alert({
+					isShow: true,
+					info: "请填写有效的手机号",
+					isSlide: true,
+					speed: 2000
+				});
+				return false;
+			}
+			return true;
+		}
 		$(".xa-getCode").click(function(event){
 			$('.xa-getCode').attr('disabled', 'true').css('background-color', '#63b7ff');
 			var phone_number = $('.xa-phoneNum').val();
@@ -300,6 +374,7 @@
 					}),
 					success: function(data) {
 						time($(event.target));
+						$('.xa-alert-getCode').removeClass('hidden');
 					},
 					error: function(data){
 						console.log(data)
@@ -318,43 +393,88 @@
 				$('.xa-getCode').removeAttr('disabled').css('background-color', '#067de2');
 			}
 		});
-//		$(".xa-submit").click(function(){
-//			var phone_number = $('.xa-phoneNum').val();
-//			var code = $('.xa-phoneCode').val();
-//			if (validate_phone(phone_number)){
-//				W.getApi().call({
-//					app: 'webapp',
-//					api: 'project_api/call',
-//					method: 'post',
-//					args: _.extend({
-//						woid: W.webappOwnerId,
-//						project_id: W.projectId,
-//						module: 'user_center',
-//
-//						target_api: 'phone/binding',
-//						phone_number: phone_number,
-//						code:code
-//					}),
-//					success: function(data) {
-//						$('.xui-page').alert({
-//							isShow: true,
-//							info: '绑定成功',
-//							isSlide: true,
-//							speed: 3000
-//						})
-//						window.location.href = "./?webapp_owner_id={{request.webapp_owner_id}}&module=user_center&model=user_info&action=get&workspace_id=user_center";
-//					},
-//					error: function(data){
-//						$('.xui-page').alert({
-//							isShow: true,
-//							info: data.data.msg,
-//							isSlide: true,
-//							speed: 2000
-//						})
-//					}
-//				});
-//			}
-//		})
+		$(".xa-submit").click(function(){
+			var phone_number = $('.xa-phoneNum').val();
+			var code = $('.xa-phoneCode').val();
+			if (validate_phone(phone_number)){
+				W.getApi().call({
+					app: 'webapp',
+					api: 'project_api/call',
+					method: 'post',
+					args: _.extend({
+						woid: W.webappOwnerId,
+						project_id: W.projectId,
+						module: 'user_center',
+
+						target_api: 'phone/binding',
+						phone_number: phone_number,
+						code:code
+					}),
+					success: function(data) {
+						$('.xui-page').alert({
+							isShow: true,
+							info: '绑定成功',
+							isSlide: true,
+							speed: 3000
+						})
+						$('.xa-alert-getCode').addClass('hidden');
+						window.location.href = "./?webapp_owner_id={{request.webapp_owner_id}}&module=user_center&model=user_info&action=get&workspace_id=user_center";
+					},
+					error: function(data){
+						$('.xui-page').alert({
+							isShow: true,
+							info: data.data.msg,
+							isSlide: true,
+							speed: 2000
+						})
+					}
+				});
+			}
+		});
+		$(".xa-btn-abolish").click(function(){
+			$('.xa-alert-getCode').addClass('hidden');
+		});
+		$(".xa-exchange-confirm").click(function(){
+			$('.xa-alert-exchange').removeClass('hidden');
+		});
+		$(".xa-exchange-submit").click(function(){
+
+				W.getApi().call({
+					app: 'webapp',
+					api: 'project_api/call',
+					method: 'post',
+					args: _.extend({
+						woid: W.webappOwnerId,
+						project_id: W.projectId,
+						module: 'user_center',
+
+						target_api: 'phone/binding',
+						phone_number: phone_number,
+						code:code
+					}),
+					success: function(data) {
+						$('.xui-page').alert({
+							isShow: true,
+							info: '绑定成功',
+							isSlide: true,
+							speed: 3000
+						})
+						$('.xa-alert-exchange').addClass('hidden');
+						window.location.href = "./?webapp_owner_id={{request.webapp_owner_id}}&module=user_center&model=user_info&action=get&workspace_id=user_center";
+					},
+					error: function(data){
+						$('.xui-page').alert({
+							isShow: true,
+							info: data.data.msg,
+							isSlide: true,
+							speed: 2000
+						})
+					}
+				});
+		});
+		$(".xa-alert-close").click(function(){
+			$('.xa-alert-exchange').addClass('hidden');
+		})
 	});
 </script>
 {% endblock %}
