--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -111,9 +111,22 @@
                         <button class="wui-i-btn-using wa-using-join wui-hide">直接参团</button>
                     </div>
                     <div class="wui-i-states none">
-                        <ul class="wa-grouped-members">
-                            <span style="margin-left: 18px">团员</span>
-                        </ul>
+                        <div class="wui-i-displayName">团员</div>
+                        <div class="wui-i-membersBox">
+                            <ul class="wui-i-members_ul wa-grouped-members">
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                                <li class="wui-i-member"><img src=""></li>
+                            </ul>
+                        </div>
+                        <div class="wui-i-membersClear"></div>
                     </div>
                 </div>
             </div>
