修改money的接口及添加页面

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -598,6 +598,9 @@ select{
 .xui-mainPanel .xui-sideBar-employeeManagement{
 	background-position: -144px -40px;
 }
+.xui-mainPanel .xui-sideBar-orderMoney{
+	background-position: -144px -63px;
+}
 .xui-mainPanel .xui-sideBar > ul{
 	margin-top:10px;
 }
