--- a/weapp/mall/templates/mall/editor/promotion/card_exchange_details.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange_details.html
@@ -112,23 +112,8 @@ $(document).ready(function() {
 	$(".xa-export").click(function(){
 		var cardNumber = $(".xa-cardNumber").val();
 		var cardUser = $(".xa-cardUser").val();
-		var args = {
-			"cardNumber" : cardNumber,
-			"cardUser" : cardUser
-		}
-		W.getApi().call({
-		    method: 'get',
-			app: 'mall2',
-			api: 'export_card_exchange_details',
-			args: args,
-			scope: this,
-			success: function(data) {
-	 			console.log("success");
-			},
-			error: function(resp) {
-				console.log("error");
-			}
-		});
+		var url = '/mall2/api/export_card_exchange_details/?cardNumber='+cardNumber+'&cardUser='+cardUser;
+  		window.open(url);
     });
 });
 
